--- a/Gallery/assets/css/style.css
+++ b/Gallery/assets/css/style.css
@@ -555,7 +555,8 @@ h6 {
 
     .navbar .getstarted,
     .navbar .getstarted:focus {
-        background: #3498db;
+        /*background: #3498db;*/
+        background: #28a745 !important;
         padding: 8px 25px;
         margin-left: 30px;
         border-radius: 50px;
@@ -565,7 +566,7 @@ h6 {
         .navbar .getstarted:hover,
         .navbar .getstarted:focus:hover {
             color: #fff;
-            background: #4aa3df;
+            background: #23903c;
         }
 
     .navbar .dropdown ul {
@@ -760,35 +761,36 @@ h6 {
   position: relative;
 }
 
-#hero h1 {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 56px;
-  text-transform: uppercase;
-  color: #2c4964;
-}
+    #hero h1 {
+        margin: 0;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 56px;
+        text-transform: uppercase;
+        color: #145222;
+    }
 
-#hero h2 {
-  color: #2c4964;
-  margin: 10px 0 0 0;
-  font-size: 24px;
-}
+    #hero h2 {
+        color: #145222;
+        margin: 10px 0 0 0;
+        font-size: 24px;
+    }
 
-#hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 12px 35px;
-  margin-top: 30px;
-  border-radius: 50px;
-  transition: 0.5s;
-  color: #fff;
-  background: #1977cc;
-}
+    #hero .btn-get-started {
+        font-family: "Raleway", sans-serif;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 14px;
+        letter-spacing: 1px;
+        display: inline-block;
+        padding: 12px 35px;
+        margin-top: 30px;
+        border-radius: 50px;
+        transition: 0.5s;
+        color: #fff;
+        /*background: #1977cc;*/
+        background: #28a745 !important;
+    }
 
 #hero .btn-get-started:hover {
   background: #3291e6;
@@ -946,10 +948,11 @@ section {
 # Why Us
 --------------------------------------------------------------*/
 .why-us .content {
-  padding: 30px;
-  background: #1977cc;
-  border-radius: 4px;
-  color: #fff;
+    padding: 30px;
+    /*background: #1977cc;*/
+    background: #28a745 !important;
+    border-radius: 4px;
+    color: #fff;
 }
 
 .why-us .content h3 {
@@ -976,8 +979,9 @@ section {
 }
 
 .why-us .content .more-btn:hover {
-  color: #1977cc;
-  background: #fff;
+    /*color: #1977cc;*/
+    color: #28a745 !important;
+    background: #fff;
 }
 
 .why-us .icon-boxes .icon-box {
@@ -990,9 +994,10 @@ section {
 }
 
 .why-us .icon-boxes .icon-box i {
-  font-size: 40px;
-  color: #1977cc;
-  margin-bottom: 30px;
+    font-size: 40px;
+    /*color: #1977cc;*/
+    color: #28a745 !important;
+    margin-bottom: 30px;
 }
 
 .why-us .icon-boxes .icon-box h4 {
