--- a/PriceList.css
+++ b/PriceList.css
@@ -3,10 +3,10 @@
 }
 
 .imagePreview {
-    width: 300px;
-    height: 150px;
+    width: inherit;
+    height: 180px;
     background-position: center center;
-    background: url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg);
+    /*background: url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg);*/
     background-color: #fff;
     background-size: cover;
     background-repeat: no-repeat;
@@ -14,13 +14,22 @@
     box-shadow: 0px -3px 6px 2px rgba(0,0,0,0.2);
 }
 
-.btn-upload {
+.imgThumbnail {
+    width: inherit;
+    height: 180px;
+    background-position: center center;
+    background-color: #fff;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: inline-block;
+    box-shadow: 0px -3px 6px 2px rgba(0,0,0,0.2);
+}
+
+.btn-primary {
     display: block;
     border-radius: 0px;
     box-shadow: 0px 4px 6px 2px rgba(0,0,0,0.2);
     margin-top: -5px;
-    background-color: #007bff;
-    color: white;
 }
 
 .imgUp {
